# modular-agent-llm

./: Cargo.toml  README.md
src/: chat.rs  claude_client.rs  completion.rs  doc.rs  embeddings.rs  lib.rs  message.rs  ollama.rs  ollama_client.rs  openai.rs  openai_client.rs  provider.rs  responses.rs
