[package]
name = "modular-agent-llm"
version = "0.11.0"
description = "LLM Agents for Modular Agent"
authors = ["Akira Ishino <akira@lumilab.jp>"]
edition = "2024"
license = "Apache-2.0 OR MIT"

[dependencies]
async-openai = { version = "0.30.1", optional = true }
async-trait = "0.1"
futures = { version = "0.3.31", optional = true }
icu_normalizer = "2.1.1"
im = "15.1.0"
ollama-rs = { version = "0.3.2", default-features = false, features = ["macros", "rustls", "stream"], optional = true }
photon-rs = { version = "0.3.3", optional = true }
schemars = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
text-splitter = { version = "0.29.3", features = ["tokenizers"] }
tokenizers = { version = "0.22.2", features = ["http"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
tokio-stream = "0.1"
uuid = { version = "1.18.1", features = ["v4"] }

modular-agent-core = "0.22.0"

[features]
default = ["image", "ollama", "openai"]
image = ["photon-rs"]
ollama = ["ollama-rs" ]
openai = ["async-openai", "futures"]

# [patch.crates-io]
# modular-agent-core = { path = "../modular-agent-core/modular-agent-core" }
