[package]
name = "modular-agent-llm"
version = "0.11.0"
description = "LLM Agents for Modular Agent"
authors = ["Akira Ishino <akira@lumilab.jp>"]
edition = "2024"
license = "Apache-2.0 OR MIT"

[dependencies]
async-trait = "0.1"
eventsource-stream = { version = "0.2", optional = true }
futures = { version = "0.3.31", optional = true }
icu_normalizer = "2.1.1"
im = "15.1.0"
photon-rs = { version = "0.3.3", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
text-splitter = { version = "0.29.3", features = ["tokenizers"] }
tokenizers = { version = "0.22.2", features = ["http"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
tokio-stream = "0.1"
uuid = { version = "1.18.1", features = ["v4"] }

modular-agent-core = "0.22.0"

[features]
default = ["image", "claude", "ollama", "openai"]
claude = ["reqwest", "eventsource-stream", "futures"]
image = ["photon-rs"]
ollama = ["reqwest", "futures"]
openai = ["reqwest", "eventsource-stream", "futures"]

# [patch.crates-io]
# modular-agent-core = { path = "../modular-agent-core/modular-agent-core" }
